Implemented a basic UI
- Added moment.js for timing

--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -1,41 +1,31 @@
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-a
-  color: #00B7FF
+  padding-bottom: 40px;
+  color: #5a5a5a;
 
-#header
-  margin: 0px 50px
 
-#sidebar
-  width: 250px
-  float: left
-  margin: 0px 50px
+header
+  // height: 50px;
+  margin-bottom: 15px;
+  background-color: #013f7a;
+  color: #fff;
 
-#playerList
-  list-style-type: none
-  padding: 10px
-  border: 1px solid #ccc
 
-#playerList li
-  padding: 5px
-  margin: 5px 0px
+.link
+  color: #08c;
+  text-decoration: none;
 
-#content
-  float: left
 
-#dropTo
+.link:hover
+  text-decoration: underline;
 
-#tabs
-  float: left
 
-#tabsmenu
+.centered
+  text-align: center;
 
-#description
-  text-align: right
 
-.whitePlayer
-  color: #f60
+.loading
+  text-align: center;
+  background: url('/images/ajax-loader.gif') center center no-repeat;
+  height: 32px;
+  width: 100%;
 
-.blackPlayer
-  color: #07f
