--- a/src/views/home.jade
+++ b/src/views/home.jade
@@ -1,26 +1,10 @@
 extends layout
 
 block content
-  #page
-    #header
-      h1= title
-    #sidebar
-      #form
-        input#input(type='text', name='name')
-        button#send Join
-      #players
-        h3 Players online
-        ul#playerList
-          //li(class="ui-state-default", data-uid='mfman')
-          //  ='The Muffin Man'
-          //li(class="ui-state-default" )
-          //  ='The Ginger Bread Man'
-    #content(style='display: none')
-      #dropTo
-        #description
-          h3 Challenge a player by dropping him here
-        #tabs
-          ul#tabsmenu
-    #footer
-    #challengePrompt
-      //p I am challenging you in a game of #{title}
+.container-fluid
+  .row-fluid
+    .span8
+    .span4
+      a.pull-right.twitter-timeline{:href => "#", :"data-widget-id" => "300189295266893824", :width => "100%"}
+      script(type='text/javascript')
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
