--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -6,6 +6,6 @@ html
     script(src='/socket.io/socket.io.js')
     script(src='/javascripts/jquery-1.8.1.min.js')
     script(src='/javascripts/coffee-script.js')
-    script(src='/javascripts/main.coffee', type='text/coffeescript')
+    block script
   body
     block content
