--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -23,3 +23,6 @@ header
   background url('/images/ajax-loader.gif') center center no-repeat
   height 32px
   width 100%
+
+.hidden
+  display: none
