--- a/src/views/home.jade
+++ b/src/views/home.jade
@@ -6,9 +6,4 @@ block script
 block content
   .container-fluid
     .row-fluid
-      .span8
-        #text
-      .span4
-        a.pull-right.twitter-timeline(href='#', data-widget-id='300189295266893824', width='100%')
-        script(type='text/javascript')
-          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+      #main-content
