--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -5,6 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/socket.io/socket.io.js')
+    script(src='/javascripts/bootstrap.min.js')
     script(src='/javascripts/jquery-1.8.1.min.js')
     script(src='/javascripts/coffee-script.js')
     script(src='https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js')
