create some publish interface

--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -26,3 +26,12 @@ header
 
 .hidden
   display: none
+
+.span-center
+  text-align center
+
+.vert-center
+  margin 100px 0px
+
+#input-form
+  height 250px
