--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -20,7 +20,7 @@ header
 
 .loading
   text-align center
-  background url('/images/ajax-loader.gif') center center no-repeat
+  background url('/img/ajax-loader.gif') center center no-repeat
   height 32px
   width 100%
 
@@ -35,3 +35,8 @@ header
 
 #input-form
   height 250px
+
+.notification
+  .body
+    font-size: 30px;
+    line-height: 35px;
