Added image views and some other notifications to the queue

--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -1,6 +1,10 @@
 body
   padding-bottom 40px
   color #5a5a5a
+  &.black
+    background-color: #000
+    header
+      margin-bottom 0px
 
 header
   // height 50px
@@ -37,6 +41,16 @@ header
   height 250px
 
 .notification
+  .alert
+    padding 30px 30px 10px 30px
   .body
-    font-size: 30px;
-    line-height: 35px;
+    font-size: 30px
+    line-height: 35px
+  .title
+    text-align: right
+    padding-top: 20px
+
+#image-container
+  img
+    max-width: 100%
+    max-height: 950px
