--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -2,6 +2,12 @@ body {
   padding-bottom: 40px;
   color: #5a5a5a;
 }
+body.black {
+  background-color: #000;
+}
+body.black header {
+  margin-bottom: 0px;
+}
 header {
   margin-bottom: 15px;
   background-color: #013f7a;
@@ -26,7 +32,6 @@ header {
 .hidden {
   display: none;
 }
-<<<<<<< HEAD
 .span-center {
   text-align: center;
 }
@@ -35,9 +40,19 @@ header {
 }
 #input-form {
   height: 250px;
-=======
+}
+.notification .alert {
+  padding: 30px 30px 10px 30px;
+}
 .notification .body {
   font-size: 30px;
   line-height: 35px;
->>>>>>> Basic Notification View
+}
+.notification .title {
+  text-align: right;
+  padding-top: 20px;
+}
+#image-container img {
+  max-width: 100%;
+  max-height: 950px;
 }
