--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -7,6 +7,10 @@ header {
   background-color: #013f7a;
   color: #fff;
 }
+.container-narrow {
+  width: 700px;
+  margin: 0px auto;
+}
 .link {
   color: #08c;
   text-decoration: none;
@@ -15,7 +19,8 @@ header {
   text-decoration: underline;
 }
 .centered {
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .loading {
   text-align: center;
@@ -26,12 +31,12 @@ header {
 .hidden {
   display: none;
 }
-.span-center {
-  text-align: center;
-}
 .vert-center {
-  margin: 100px 0px;
+  padding: 100px 0px 50px;
 }
 #input-form {
   height: 250px;
+}
+.center-block {
+  display: inline-block;
 }
