--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -3,10 +3,14 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-datepicker.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-timepicker.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/socket.io/socket.io.js')
     script(src='/javascripts/jquery-1.9.1.min.js')
     script(src='/javascripts/bootstrap.min.js')
+    script(src='/javascripts/bootstrap-datepicker.js')
+    script(src='/javascripts/bootstrap-timepicker.min.js')
     script(src='/javascripts/coffee-script.js')
     script(src='https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js')
     block script
