--- a/src/views/home.jade
+++ b/src/views/home.jade
@@ -26,7 +26,7 @@ block content
           .span4
             h1 Twitter Feed
             #twitter-widget
-              a.twitter-timeline(href="https://twitter.com/search?q=%23IChack", "data-widget-id"="300189295266893824", height="850")
-              script(type='text/javascript')
+              //-a.twitter-timeline(href="https://twitter.com/search?q=%23IChack", "data-widget-id"="300189295266893824", height="850")
+              //-script(type='text/javascript')
                 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 
