--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -3,10 +3,12 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap-datepicker.css')
+    link(rel='stylesheet', href='/stylesheets/datepicker.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap-timepicker.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/socket.io/socket.io.js')
+    script(src='/javascripts/dust.js')
+    script(src='/javascripts/templates.js')
     script(src='/javascripts/jquery-1.9.1.min.js')
     script(src='/javascripts/bootstrap.min.js')
     script(src='/javascripts/bootstrap-datepicker.js')
