--- a/src/views/admin.jade
+++ b/src/views/admin.jade
@@ -11,8 +11,7 @@ block content
             button.btn.btn-success.btn-large.active(data-type='text') Text
             button.btn.btn-success.btn-large(data-type='image') Picture
             button.btn.btn-success.btn-large(data-type='web') Web
-            button.btn.btn-success.btn-large.disabled(data-type='twitter') Twitter
-            button.btn.btn-success.btn-large.disabled(data-type='facebook') Facebook
+            button.btn.btn-success.btn-large(data-type='twitter') Twitter
             button.btn.btn-success.btn-large.disabled(data-type='chat') Chat
         form#input-form.form-horizontal
           .row.input-row.vert-center
@@ -35,6 +34,11 @@ block content
                 label.control-label Website url
                 .controls
                   input#input-web(type='text', name='name')
+          .row.input-row.vert-center(style='display: none')
+              .control-group.center-block
+                label.control-label Twitter search
+                .controls
+                  input#input-twitter(type='text', name='name')
           .row
             .span8
               label.control-label Display until
