--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -18,8 +18,7 @@ html
     script(src='/javascripts/jquery.twitter.search.js')
     block script
   body
-    include templates
-    header
+    #header
       .container-fluid
         h1.pull-left Lab Screens
         h1#clock.pull-right
