--- a/src/views/template/twitter.jade
+++ b/src/views/template/twitter.jade
@@ -1,7 +1,6 @@
-#dashboard
-  .span10
-     h1 Twitter Feed
-     #twitter-widget
+#dashboard.container-fluid.padded-main
+  h1 Twitter Feed
+  #twitter-widget
 
 script
   $('#twitter-widget').twitterSearch({term: "{term|uc}", title: "{term}"})
