--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -1,20 +1,19 @@
 body
-  padding-bottom 40px
   color #5a5a5a
-  &.black
-    background-color: #000
-    header
-      margin-bottom 0px
+  overflow hidden
 
-header
+#header
   // height 50px
-  margin-bottom 15px
   background-color #013f7a
   color #fff
 
 .container-narrow
   width 700px
   margin 0px auto
+
+.padded-main
+  padding-top 15px
+  padding-bottom 30px
 
 .link
   color #08c
@@ -24,17 +23,21 @@ header
   text-decoration underline
 
 .centered
-  margin-left: auto
-  margin-right: auto
+  margin-left auto
+  margin-right auto
 
 .loading
   text-align center
   background url('/img/ajax-loader.gif') center center no-repeat
   height 32px
   width 100%
+  margin 200px 0px
+
+.background-black
+  background-color black
 
 .hidden
-  display: none
+  display none
 
 .vert-center
   padding 100px 0px 50px
@@ -44,22 +47,25 @@ header
 
 
 .center-block
-  display: inline-block
+  display inline-block
 
 .notification
   .alert
     padding 30px 30px 10px 30px
   .body
-    font-size: 30px
-    line-height: 35px
+    font-size 30px
+    line-height 35px
   .title
-    text-align: right
-    padding-top: 20px
+    text-align right
+    padding-top 20px
 
 #image-container
   img
-    max-width: 100%
-    max-height: 950px
+    max-width 100%
+    max-height 950px
 
 .input-append .add-on
   border-radius 0 4px 4px 0
+
+.datepicker
+  padding 0px
