change font and add clock to submission

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,3 +1,6 @@
+html {
+  font-family: Roboto !important s;
+}
 body {
   color: #5a5a5a;
   overflow: hidden;
@@ -5,6 +8,9 @@ body {
 #header {
   background-color: #013f7a;
   color: #fff;
+}
+.container {
+  margin-top: 20px;
 }
 .container-narrow {
   width: 700px;
