--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -1,3 +1,6 @@
+html
+  font-family Roboto !importants
+
 body
   color #5a5a5a
   overflow hidden
@@ -6,6 +9,9 @@ body
   // height 50px
   background-color #013f7a
   color #fff
+
+.container
+  margin-top 20px
 
 .container-narrow
   width 700px
