--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html
   head
     title= title
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto')
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/datepicker.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap-timepicker.min.css')
