change publish notifications

--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -15,6 +15,7 @@ html
     script(src='/javascripts/bootstrap-datepicker.js')
     script(src='/javascripts/bootstrap-timepicker.min.js')
     script(src='/javascripts/coffee-script.js')
+    script(src='/javascripts/jquery.bootstrap-growl.min.js')
     script(src='https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js')
     script(src='/javascripts/jquery.twitter.search.js')
     block script
