--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -69,6 +69,8 @@ body
   img
     max-width 100%
     max-height 950px
+    margin: 0 auto;
+    display: block;
 
 .input-append .add-on
   border-radius 0 4px 4px 0
