--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -67,6 +67,8 @@ body {
 #image-container img {
   max-width: 100%;
   max-height: 950px;
+  margin: 0 auto;
+  display: block;
 }
 .input-append .add-on {
   border-radius: 0 4px 4px 0;
