--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/datepicker.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap-timepicker.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-lightbox.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/socket.io/socket.io.js')
     script(src='/javascripts/dust.js')
@@ -16,6 +17,8 @@ html
     script(src='/javascripts/bootstrap-timepicker.min.js')
     script(src='/javascripts/coffee-script.js')
     script(src='/javascripts/jquery.bootstrap-growl.min.js')
+    script(src='/javascripts/bootstrap-lightbox.js')
+    script(src='/javascripts/jquery.cookie.js')
     script(src='https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js')
     script(src='/javascripts/jquery.twitter.search.js')
     block script
