--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -51,6 +51,12 @@ body
 #input-form
   height 250px
 
+.login-box
+  padding 30px 20px 10px
+  .control-label
+    width 100px
+  .controls
+    margin-left 120px
 
 .center-block
   display inline-block
