--- a/src/views/admin.jade
+++ b/src/views/admin.jade
@@ -19,37 +19,56 @@ block content
               .control-group.center-block.vert-center
                 label.control-label Message text
                 .controls
-                  input#input-text(type='text', name='name')
+                  input#input-value-text(type='text', name='name')
               include display_until
             .row.input-row(style='display: none')
               .control-group.center-block.vert-center
                 label.control-label Picture file
                 .controls
-                  input#input-file(type='file', name='name')
+                  input#input-value-file(type='file', name='name')
               include display_until
             .row.input-row(style='display: none')
               .control-group.center-block.vert-center
                 label.control-label Picture url
                 .controls
-                  input#input-image(type='text', name='name')
+                  input#input-value-image(type='text', name='name')
               include display_until
             .row.input-row(style='display: none')
               .control-group.center-block.vert-center
                 label.control-label Website url
                 .controls
-                  input#input-web(type='text', name='name')
+                  input#input-value-web(type='text', name='name')
               include display_until
             .row.input-row(style='display: none')
               .control-group.center-block.vert-center
                 label.control-label Twitter search
                 .controls
-                  input#input-twitter(type='text', name='name')
+                  input#input-value-twitter(type='text', name='name')
               include display_until
             .row.input-row(style='display: none')
               .control-group.center-block.vert-center
                 label.control-label Chat message
                 .controls
-                  input#input-chat(type='text', name='name')
+                  input#input-value-chat(type='text', name='name')
         .row.text-center
           p
-            button.btn.btn-large.btn-primary#send Send
+            button.btn.btn-large.btn-primary#input-button Send
+
+  #login.lightbox.hide.fade(tabindex="-1", role="dialog", aria-hidden="true")
+    // .lightbox-header
+    //  button.close(data-dismiss='lightbox', aria-hidden="true") &times;
+    .lightbox-content.login-box
+      .row
+        form#login-form.form-horizontal
+          .row.input-row
+            .control-group
+              label.control-label Username
+              .controls
+                input#login-value-username(type='text', name='username')
+            .control-group
+              label.control-label Password
+              .controls
+                input#login-value-password(type='password', name='password')
+      .row.text-center
+          p
+            button.btn.btn-large.btn-primary#login-button Login
